2007-02-26  Per Bothner  <per@bothner.com>

	* TypeSwitch.java (inline): Update for new CanInline api.
	* SlotGet.java (inline): Likewise.
	* InstanceOf.java (inline): Likewise.
	* Invoke.java (inline): Likewise.
	* SlotSet.java (inline): Likewise.

2007-02-23  Per Bothner  <per@bothner.com>

	* FieldLocation.java (setWithSave, setRestore): New methods.

2007-02-18  Per Bothner  <per@bothner.com>

	* SlotGet.java (apply2): Also allow SimpleSymbol or SimpleSymbol.
	* SlotSet.java (apply3): Generalize method name type.

2007-01-17  Per Bothner  <per@bothner.com>

	* TypeSwitch.java (compile): Handle default case similarly as
	other cases - specifically with variable.
	Minor optimization in case variable is unused.

2007-01-02  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods, apply): Generalize from ClassType
	to ObjectType.
	* Invoke.java (apply, applyN, lookupMethods, selectApplicable):
	Likewise.

2006-12-29  Per Bothner  <per@bothner.com>

	* Invoke.java (inline): Fix off-by-one error.

2006-12-23  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN, inline): Look for "valueOf" method if there
	is no suitable constructor.

	* Invoke.java (getMethods): Split non-reentrant method into two ...
	(getMethods, selectApplicable): ... new re-entrant methods.
	(cacheMethods, cacheArgs, cacheDefinitelyApplicableMethodCount,
	cachePossiblyApplicableMethodCount): Remove static fields.

2006-12-06  Per Bothner  <per@bothner.com>

	* OccurrenceType.java: ElementPredicate was renamed to ItemPredicate.

2006-11-16  Per Bothner  <per@bothner.com>

	* SingletonType.java (compare, coerceToSingleton, coerceFromObject,
	emitCoerceFromObject): New methods.
	* OccurrenceType.java (emptySequenceType): Use SingletonType for base.

2006-11-07  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (itemCountRange, itemCountIsOne): Fix thinko
	replacing 1001 by 0x1001.  Compare base if it is ObjectType,
	not only ClassType.

2006-11-01  Per Bothner  <per@bothner.com>
