@@ -1,3 +1,9 @@
+2007-02-28  Per Bothner  <per@bothner.com>
+
+	* Invoke.java (inline): In the invoke-special case signal error if
+	no best match found.  This is intended as a partial fix for 
+	Savannah bug#18790, mis-compilation of invoke-special.
+
 2007-02-26  Per Bothner  <per@bothner.com>
 
 	* TypeSwitch.java (inline): Update for new CanInline api.
